@@ -104,6 +104,8 @@ public @interface Test {
    */
   Class<?> dataProviderClass() default Object.class;
 
+  String dataProviderDynamicClass() default "";
+
   /**
    * If set to true, this test method will always be run even if it depends on a method that failed.
    * This attribute will be ignored if this test doesn't depend on any method or group.
