@@ -25,6 +25,8 @@ version.com.google.inject..guice-bom=5.0.1
 
 version.commons-io..commons-io=2.11.0
 
+version.in.jlibs..jlibs-core=3.0.1
+
 version.javax..javaee-api=8.0.1
 
 version.junit.junit=4.13.2
@@ -42,6 +44,10 @@ version.org.apache.felix..org.apache.felix.framework=7.0.0
 version.org.assertj..assertj-core=3.22.0
 
 version.org.codehaus.groovy..groovy-all=2.4.7
+
+version.org.gridkit.jvmtool..heaplib=0.2
+
+version.org.gridkit.lab..jvm-attach-api=1.5
 
 version.org.jboss.shrinkwrap..shrinkwrap-api=1.2.6
 
